syntax = "proto3";

package settlus.posa;

import "gogoproto/gogo.proto";

option go_package = "github.com/settlus/chain/x/posa/types";

// CreateValidatorProposal defines a proposal to create a new validator
message CreateValidatorProposal {
  option (gogoproto.equal) = false;

  string title = 1;
  string description = 2;
  ValidatorInfo info = 3;
}

// ValidatorInfo contains the information of a validator
message ValidatorInfo {
  option (gogoproto.equal) = false;

  string moniker = 1;
  string min_self_delegation = 2;
  string delegator_address = 3;
  string pubkey = 4;
  string amount = 5;
  bool is_probono = 6;
  string max_delegation = 7;
}